# xdg-termfilechooser-bridge

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  constants.rs  filepicker.rs  logger.rs  main.rs  terminals.rs
