[package]
name = "xdg-termfilechooser-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
dirs = "6.0.0"
fern = { version = "0.7.1", features = ["chrono", "colored"] }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
shell-escape = "0.1.5"
toml = "0.8.22"
which = "7.0.3"
